2010-10-16 16:53-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* config/objc-common.g: Correct test.  The previous version didn't
	include the { and the } in the ivar section.  This is not correct.
	* Source/ObjectiveC2/sync.m: Correct license text.

2010-10-13  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSURL.m: Match OSX behavior with file scheme URLS (treat
	them like http/https rather than accorinding to the RFCs).

2010-10-12  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/GSXML.m: If we receive an attribute name with no
	corresponding value, assume it's a minimised attribute in html ...
	and we should set the value to be the same as the name.

2010-10-12  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/GSObjCRuntime.m: Add support for arbitrary struct
	get/set since OSX has it at last (not just well-known structs).
 
2010-10-12 David Chisnall <theraven@gna.org>

	* Source/Additions/GSObjCRuntime.m: 
	Add special case to KVC accessors for libobjc2: If there is a method
	with the wrong types, try calling the method with the correct types.
	This enables the TDD-fixup code to run and generate a KVC-compliant
	version of an existing method.

2010-10-12  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSURL.m: Exactly match the percent escaping used by OSX.

2010-10-08  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/GSAvahiRunLoopIntegration.m: Fix some bugs:
	 - Remove an extra retain of the NSTimer which was leaking memory.
	 - When passed a NULL struct timeval * from avahi, invalidate
	 the timer and don't schedule a new one.

2010-10-04  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSPredicate.m: Add simple implementation of
	evalutedObjectExpression

2010-10-01  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/GSObjCRuntime.m: Revert to the working version
	from the last release.
	Can't see a changelog for the last change, I guess some local